<resources>
    <string name="app_name">COUNTRYCODEz</string>

    <!--Button Category -->
    <string name="button_1_text">1</string>
    <string name="button_2_text">2</string>
    <string name="button_3_text">3</string>
    <string name="button_4_text">4</string>
    <string name="button_5_text">5</string>
    <string name="button_6_text">6</string>
    <string name="button_7_text">7</string>
    <string name="button_8_text">8</string>
    <string name="button_9_text">9</string>
    <string name="button_0_text">0</string>
    <string name="button_clear_text">C</string>
    <string name="button_checkNumber">Controleer land bij\n nummer</string>

    <!--Message Category -->
    <string name="display_no_input">No input.</string>

</resources>
