<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gridLayout"
        android:columnCount="5"
        android:rowCount="9">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="4"
            android:inputType="text"
            android:textSize="50sp"
            android:textIsSelectable="false"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:text="@string/button_9_text"
            android:id="@+id/button_9"
            android:layout_row="3"
            android:layout_column="4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:text="@string/button_8_text"
            android:id="@+id/button_8"
            android:layout_row="3"
            android:layout_column="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:text="@string/button_7_text"
            android:id="@+id/button_7"
            android:layout_row="3"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:text="@string/button_6_text"
            android:id="@+id/button_6"
            android:layout_row="4"
            android:layout_column="4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:text="@string/button_5_text"
            android:id="@+id/button_5"
            android:layout_row="4"
            android:layout_column="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:text="@string/button_4_text"
            android:id="@+id/button_4"
            android:layout_row="4"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:text="@string/button_3_text"
            android:id="@+id/button_3"
            android:layout_row="5"
            android:layout_column="4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:text="@string/button_2_text"
            android:id="@+id/button_2"
            android:layout_row="5"
            android:layout_column="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:text="@string/button_1_text"
            android:id="@+id/button_1"
            android:layout_row="5"
            android:layout_column="2" />

        <ImageButton
            android:layout_width="86dp"
            android:layout_height="75dp"
            android:id="@+id/button_call"
            android:layout_row="6"
            android:layout_column="2"
            android:src="@android:drawable/ic_menu_call" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:text="@string/button_0_text"
            android:id="@+id/button_0"
            android:layout_row="6"
            android:layout_column="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:text="@string/button_clear_text"
            android:id="@+id/button_clear"
            android:layout_row="6"
            android:layout_column="4" />

        <Button
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:text="@string/button_checkNumber"
            android:id="@+id/button_checkNumber"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_columnSpan="5"
            android:layout_marginLeft="50dp" />

    </GridLayout>

</RelativeLayout>
